Integrate upstream 8.2 compatibility release
Port the MasuCraft fixes and custom-mod support onto Yorick's 8.2 source base.

Add 10.0.0 migration resources, optional integrations, MasuGUI bridge, regression tests, docs, and release verification notes.